--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,6 +13,9 @@
   min-width: 500px;
   margin-bottom: 33px;
 }
+.center {
+  text-align: center;
+}
 .btn-login {
   background: transparent;
   background-color: rgba(255, 104, 91, 1);
