--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -72,6 +72,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin-bottom: 40px;
   position: relative;
 }
 .card-item:not(:last-child) {
@@ -99,6 +100,10 @@
   height: 2px;
   background-color: rgba(255, 104, 91, 1);
   margin-bottom: 20px;
+}
+
+.logout-attention {
+  margin-bottom: 60px;
 }
 
 
